--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
   <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Bootstrap CSS -->
-  <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
+  <link href="bootstrap/css/bootstrap.css" rel="stylesheet" />
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 
   <title>Ferry Nurqadar | Portfolio</title>
 </head>
@@ -22,7 +22,8 @@
         <a class="navbar-brand" href="#">
           <h2>Ferry Nurqadar</h2>
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -35,6 +36,11 @@
             <li class="nav-item">
               <a class="nav-link" href="#about">
                 <h5>About</h5>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#skills">
+                <h5>Skills</h5>
               </a>
             </li>
             <li class="nav-item">
@@ -60,7 +66,9 @@
     <h1 class="display-4">Ferry Nurqadar</h1>
     <p class="fs-2 fw-light">Security Engineer</p>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-      <path fill="#273036" fill-opacity="1" d="M0,256L48,229.3C96,203,192,149,288,149.3C384,149,480,203,576,192C672,181,768,107,864,106.7C960,107,1056,181,1152,202.7C1248,224,1344,192,1392,176L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path>
+      <path fill="#273036" fill-opacity="1"
+        d="M0,256L48,229.3C96,203,192,149,288,149.3C384,149,480,203,576,192C672,181,768,107,864,106.7C960,107,1056,181,1152,202.7C1248,224,1344,192,1392,176L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+      </path>
     </svg>
   </div>
   <!-- Photo -->
@@ -75,25 +83,130 @@
       </div>
       <div class="row justify-content-center p-3">
         <div class="col-md-4 ">
-          <p class="text-white">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias ipsa delectus expedita nesciunt beatae animi, id doloremque maxime repellendus deserunt autem cumque optio aspernatur asperiores cupiditate voluptates et eligendi ea.</p>
+          <p class="text-white">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias ipsa delectus expedita
+            nesciunt beatae animi, id doloremque maxime repellendus deserunt autem cumque optio aspernatur asperiores
+            cupiditate voluptates et eligendi ea.</p>
         </div>
         <div class="col-md-4">
-          <p class="text-white">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio, vitae porro molestiae et illo mollitia sed veniam! Omnis et itaque minus tempore inventore accusantium iste deleniti voluptates numquam! Optio, consequatur.</p>
+          <p class="text-white">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio, vitae porro molestiae et
+            illo mollitia sed veniam! Omnis et itaque minus tempore inventore accusantium iste deleniti voluptates
+            numquam! Optio, consequatur.</p>
         </div>
       </div>
     </div>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-      <path fill="#cccccc" fill-opacity="1" d="M0,64L26.7,90.7C53.3,117,107,171,160,202.7C213.3,235,267,245,320,224C373.3,203,427,149,480,133.3C533.3,117,587,139,640,138.7C693.3,139,747,117,800,112C853.3,107,907,117,960,133.3C1013.3,149,1067,171,1120,186.7C1173.3,203,1227,213,1280,202.7C1333.3,192,1387,160,1413,144L1440,128L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z"></path>
+      <path fill="#cccccc" fill-opacity="1"
+        d="M0,64L26.7,90.7C53.3,117,107,171,160,202.7C213.3,235,267,245,320,224C373.3,203,427,149,480,133.3C533.3,117,587,139,640,138.7C693.3,139,747,117,800,112C853.3,107,907,117,960,133.3C1013.3,149,1067,171,1120,186.7C1173.3,203,1227,213,1280,202.7C1333.3,192,1387,160,1413,144L1440,128L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z">
+      </path>
     </svg>
   </div>
   <!-- About -->
 
-  <!-- Project -->
-  <div class="project" id="project">
+  <!-- Skills -->
+  <section class="skills1" id="skills">
     <div class="container">
       <div class="row">
         <div class="col">
-          <h1 class="text-center">Project</h1>
+          <h1 class="text-center">Programming Language</h1>
+          <br>
+          <br>
+        </div>
+      </div>
+      <div class="row justify-content-center p-3">
+        <div class="col-md-3 text-center">
+          <div class="card">
+            <img src="assets/C.png" class="cartd-img-op shadow-lg " alt="C">
+            <div class="card-body shadow-lg" style="background-color: #c1c1c1;">
+              <h5 class="card-title">C</h5>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 text-center">
+          <div class="card">
+            <img src="assets/CSS.png" class="cartd-img-op shadow-lg " alt="CSS">
+            <div class="card-body shadow-lg" style="background-color: #c1c1c1;">
+              <h5 class="card-title">CSS</h5>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 text-center">
+          <div class="card">
+            <img src="assets/HTML5.png" class="cartd-img-op shadow-lg " alt="HTML5">
+            <div class="card-body shadow-lg" style="background-color: #c1c1c1;">
+              <h5 class="card-title">HTML</h5>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 text-center">
+          <div class="card">
+            <img src="assets/PHP.png" class="cartd-img-op shadow-lg " alt="PHP">
+            <div class="card-body shadow-lg" style="background-color: #c1c1c1;">
+              <h5 class="card-title">PHP</h5>
+            </div>
+          </div>
+        </div>
+        <div class="row justify-content-center p-3">
+          <div class="col-md-3 text-center">
+            <div class="card">
+              <img src="assets/PYTHON.png" class="cartd-img-op shadow-lg " alt="PYTHON">
+              <div class="card-body shadow-lg" style="background-color: #c1c1c1;">
+                <h5 class="card-title">Python</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 text-center">
+            <div class="card">
+              <img src="assets/SQL.png" class="cartd-img-op shadow-lg " alt="SQL">
+              <div class="card-body shadow-lg" style="background-color: #c1c1c1;">
+                <h5 class="card-title">Microsoft SQL Server</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row justify-content-center p-3">
+          <div class="col-md-3 text-center">
+            <br>
+            <br>
+            <br>
+            <br>
+            <h1 class="text-center">Cyber Security</h1>
+            <br>
+          </div>
+        </div>
+        <div class="row justify-content-center p-3">
+          <div class="col-md-3 text-center">
+            <div class="card">
+              <img src="assets/CYBER.png" class="cartd-img-op shadow-lg " alt="CYBER">
+              <div class="card-body shadow-lg" style="background-color: #c1c1c1;">
+                <h5 class="card-title">Cyber Defense</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 text-center">
+            <div class="card">
+              <img src="assets/Offensive.png" class="cartd-img-op shadow-lg " alt="Offensive">
+              <div class="card-body shadow-lg" style="background-color: #c1c1c1;">
+                <h5 class="card-title">Offensive Pentesting</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path fill="#273036" fill-opacity="1"
+        d="M0,160L26.7,160C53.3,160,107,160,160,176C213.3,192,267,224,320,197.3C373.3,171,427,85,480,74.7C533.3,64,587,128,640,154.7C693.3,181,747,171,800,165.3C853.3,160,907,160,960,144C1013.3,128,1067,96,1120,101.3C1173.3,107,1227,149,1280,186.7C1333.3,224,1387,256,1413,272L1440,288L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z">
+      </path>
+    </svg>
+  </section>
+  <!-- Skills -->
+
+  <!-- Project -->
+  <section class="project" id="project">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <h1 class="text-center text-white">Project</h1>
         </div>
       </div>
       <br>
@@ -103,7 +216,8 @@
           <div class="card">
             <img src="assets/1.jpg" class="card-img-top" alt="photo1">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
             </div>
           </div>
         </div>
@@ -111,7 +225,8 @@
           <div class="card">
             <img src="assets/2.jpg" class="card-img-top" alt="photo2">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
             </div>
           </div>
         </div>
@@ -119,16 +234,19 @@
           <div class="card">
             <img src="assets/3.jpg" class="card-img-top" alt="photo3">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
             </div>
           </div>
         </div>
       </div>
     </div>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-      <path fill="#273036" fill-opacity="1" d="M0,256L26.7,256C53.3,256,107,256,160,229.3C213.3,203,267,149,320,149.3C373.3,149,427,203,480,229.3C533.3,256,587,256,640,245.3C693.3,235,747,213,800,176C853.3,139,907,85,960,106.7C1013.3,128,1067,224,1120,256C1173.3,288,1227,256,1280,256C1333.3,256,1387,288,1413,304L1440,320L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z"></path>
+      <path fill="#cccccc" fill-opacity="1"
+        d="M0,256L26.7,224C53.3,192,107,128,160,90.7C213.3,53,267,43,320,69.3C373.3,96,427,160,480,202.7C533.3,245,587,267,640,240C693.3,213,747,139,800,128C853.3,117,907,171,960,176C1013.3,181,1067,139,1120,122.7C1173.3,107,1227,117,1280,133.3C1333.3,149,1387,171,1413,181.3L1440,192L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z">
+      </path>
     </svg>
-  </div>
+  </section>
   <!-- Project -->
 
   <!-- Contact -->
@@ -136,22 +254,22 @@
     <div class="container">
       <div class="row p-3">
         <div class="col">
-          <h1 class="text-white text-center">Contact</h1>
+          <h1 class="text-center">Contact</h1>
         </div>
       </div>
       <div class="row justify-content-center">
         <div class="col-5">
           <form>
             <div class="mb-3">
-              <label for="Name" class="form-label text-white">Name</label>
+              <label for="Name" class="form-label">Name</label>
               <input type="text" class="form-control" id="Name" aria-describedby="emailHelp">
             </div>
             <div class="mb-3">
-              <label for="Email" class="form-label text-white">Email</label>
+              <label for="Email" class="form-label">Email</label>
               <input type="email" class="form-control" id="Email">
             </div>
             <div class="mb-3">
-              <label for="exampleFormControlTextarea1" class="form-label text-white">Message</label>
+              <label for="exampleFormControlTextarea1" class="form-label">Message</label>
               <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
             <div class="d-grid gap-2 col-3 mx-auto">
@@ -162,14 +280,18 @@
       </div>
     </div>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-      <path fill="#cccccc" fill-opacity="1" d="M0,192L26.7,197.3C53.3,203,107,213,160,197.3C213.3,181,267,139,320,128C373.3,117,427,139,480,138.7C533.3,139,587,117,640,138.7C693.3,160,747,224,800,245.3C853.3,267,907,245,960,202.7C1013.3,160,1067,96,1120,101.3C1173.3,107,1227,181,1280,197.3C1333.3,213,1387,171,1413,149.3L1440,128L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z"></path>
+      <path fill="#273036" fill-opacity="1"
+        d="M0,96L26.7,112C53.3,128,107,160,160,154.7C213.3,149,267,107,320,80C373.3,53,427,43,480,74.7C533.3,107,587,181,640,197.3C693.3,213,747,171,800,165.3C853.3,160,907,192,960,186.7C1013.3,181,1067,139,1120,149.3C1173.3,160,1227,224,1280,229.3C1333.3,235,1387,181,1413,154.7L1440,128L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z">
+      </path>
     </svg>
   </div>
   <!-- Contact -->
 
   <!-- Footer -->
   <footer class="footer1 pb-3">
-    <p class="text-center">Created with ❤️ by <a href="https://www.instagram.com/marmut_handsome/" class="fw-bold">Ferry Nurqadar</a></p>
+    <p class="text-center text-white">Created with ❤️ by <a href="https://www.instagram.com/marmut_handsome/"
+        class="fw-bold">Ferry
+        Nurqadar</a></p>
   </footer>
   <!-- Footer -->
 
