--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <!-- Bootstrap CSS -->
   <link href="bootstrap/css/bootstrap.css" rel="stylesheet" />
-
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <link rel="stylesheet" href="style.css" />
 
   <title>Ferry Nurqadar | Portfolio</title>
@@ -17,8 +17,8 @@
 <body>
   <!-- Navbar -->
   <div class="container">
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark p-3">
-      <div class="container-md shadow-lg">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark p-3 shadow-lg">
+      <div class="container-md">
         <a class="navbar-brand" href="#">
           <h2>Ferry Nurqadar</h2>
         </a>
@@ -61,8 +61,9 @@
   <!-- Navbar -->
 
   <!-- Photo -->
-  <div class="jumbotron text-center">
-    <img src="assets/photo kotak.jpg" alt="Ferry Nurqadar" width="200" class="rounded-circle border border-dark">
+  <div class="jumbotron text-center" data-aos="fade-in">
+    <img src="assets/photo kotak.jpg" alt="Ferry Nurqadar" width="200"
+      class="rounded-circle border border-dark shadow-lg">
     <h1 class="display-4">Ferry Nurqadar</h1>
     <p class="fs-2 fw-light">Security Engineer</p>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -75,17 +76,16 @@
 
   <!-- About -->
   <div class="about" id="about">
-    <div class="container">
+    <div class="container" data-aos="fade-in">
       <div class="row">
         <div class="col">
-          <h1 class="text-white text-center">About</h1>
+          <h1 class="text-white text-center">ABOUT</h1>
+          <br>
         </div>
       </div>
       <div class="row justify-content-center p-3">
         <div class="col-md-4 ">
-          <p class="text-white">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias ipsa delectus expedita
-            nesciunt beatae animi, id doloremque maxime repellendus deserunt autem cumque optio aspernatur asperiores
-            cupiditate voluptates et eligendi ea.</p>
+          <p class="text-white">Hi there! my name is Ferry Nurqadar</p>
         </div>
         <div class="col-md-4">
           <p class="text-white">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio, vitae porro molestiae et
@@ -107,13 +107,13 @@
     <div class="container">
       <div class="row">
         <div class="col">
-          <h1 class="text-center">Programming Language</h1>
+          <h1 class="text-center" data-aos="flip-down">PROGRAMMING LANGUAGE</h1>
           <br>
           <br>
         </div>
       </div>
       <div class="row justify-content-center p-3">
-        <div class="col-md-3 text-center">
+        <div class="col-md-2 text-center" data-aos="flip-left">
           <div class="card">
             <img src="assets/C.png" class="cartd-img-op shadow-lg " alt="C">
             <div class="card-body shadow-lg" style="background-color: #c1c1c1;">
@@ -121,7 +121,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3 text-center">
+        <div class="col-md-2 text-center" data-aos="flip-left">
           <div class="card">
             <img src="assets/CSS.png" class="cartd-img-op shadow-lg " alt="CSS">
             <div class="card-body shadow-lg" style="background-color: #c1c1c1;">
@@ -129,7 +129,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3 text-center">
+        <div class="col-md-2 text-center" data-aos="flip-left">
           <div class="card">
             <img src="assets/HTML5.png" class="cartd-img-op shadow-lg " alt="HTML5">
             <div class="card-body shadow-lg" style="background-color: #c1c1c1;">
@@ -137,7 +137,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3 text-center">
+        <div class="col-md-2 text-center" data-aos="flip-left">
           <div class="card">
             <img src="assets/PHP.png" class="cartd-img-op shadow-lg " alt="PHP">
             <div class="card-body shadow-lg" style="background-color: #c1c1c1;">
@@ -146,7 +146,7 @@
           </div>
         </div>
         <div class="row justify-content-center p-3">
-          <div class="col-md-3 text-center">
+          <div class="col-md-2 text-center" data-aos="flip-right">
             <div class="card">
               <img src="assets/PYTHON.png" class="cartd-img-op shadow-lg " alt="PYTHON">
               <div class="card-body shadow-lg" style="background-color: #c1c1c1;">
@@ -154,27 +154,27 @@
               </div>
             </div>
           </div>
-          <div class="col-md-3 text-center">
+          <div class="col-md-2 text-center" data-aos="flip-right">
             <div class="card">
               <img src="assets/SQL.png" class="cartd-img-op shadow-lg " alt="SQL">
               <div class="card-body shadow-lg" style="background-color: #c1c1c1;">
-                <h5 class="card-title">Microsoft SQL Server</h5>
+                <h5 class="card-title">SQL Server</h5>
               </div>
             </div>
           </div>
         </div>
-        <div class="row justify-content-center p-3">
-          <div class="col-md-3 text-center">
+        <div class="row justify-content-center p-3" data-aos="flip-down">
+          <div class="col-md-4 text-center">
             <br>
             <br>
             <br>
             <br>
-            <h1 class="text-center">Cyber Security</h1>
+            <h1 class="text-center" data-aos="flip-down">CYBER SECURITY</h1>
             <br>
           </div>
         </div>
         <div class="row justify-content-center p-3">
-          <div class="col-md-3 text-center">
+          <div class="col-md-2 text-center" data-aos="flip-left">
             <div class="card">
               <img src="assets/CYBER.png" class="cartd-img-op shadow-lg " alt="CYBER">
               <div class="card-body shadow-lg" style="background-color: #c1c1c1;">
@@ -182,7 +182,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-3 text-center">
+          <div class="col-md-2 text-center" data-aos="flip-left">
             <div class="card">
               <img src="assets/Offensive.png" class="cartd-img-op shadow-lg " alt="Offensive">
               <div class="card-body shadow-lg" style="background-color: #c1c1c1;">
@@ -206,36 +206,47 @@
     <div class="container">
       <div class="row">
         <div class="col">
-          <h1 class="text-center text-white">Project</h1>
+          <h1 class="text-center text-white" data-aos="fade-up">PROJECTS</h1>
         </div>
       </div>
       <br>
       <br>
-      <div class="row justify-content-center">
+      <div class="row justify-content-center" data-aos="fade-up">
         <div class="col-md-3">
           <div class="card">
-            <img src="assets/1.jpg" class="card-img-top" alt="photo1">
-            <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+            <img src="assets/TryHackMe.png" class="cartd-img-op shadow-lg " alt="TryHackMe">
+            <div class="card-body shadow-lg" style="background-color: #c1c1c1;">
+              <h5 class="card-title text-center">TryHackMe CTF Report</h5>
+              <div class="d-grid gap-2 col-5 mx-auto">
+                <br>
+                <a href="https://github.com/nieshakenzie/TryHackMe"><button class="btn btn-dark" type="button">Click
+                    Here</button></a>
+              </div>
             </div>
           </div>
         </div>
         <div class="col-md-3">
           <div class="card">
-            <img src="assets/2.jpg" class="card-img-top" alt="photo2">
-            <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+            <img src="assets/Letsdefend.png" class="cartd-img-op shadow-lg " alt="Letsdefend">
+            <div class="card-body shadow-lg" style="background-color: #c1c1c1;">
+              <h5 class="card-title text-center">Let's Defend Analysis Report</h5>
+              <div class="d-grid gap-2 col-5 mx-auto">
+                <br>
+                <a href="https://github.com/nieshakenzie/LetsDefend"><button class="btn btn-dark" type="button">Click
+                    Here</button></a>
+              </div>
             </div>
           </div>
         </div>
         <div class="col-md-3">
           <div class="card">
-            <img src="assets/3.jpg" class="card-img-top" alt="photo3">
-            <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+            <img src="assets/HTB.png" class="cartd-img-op shadow-lg " alt="HTB">
+            <div class="card-body shadow-lg" style="background-color: #c1c1c1;">
+              <h5 class="card-title text-center">HackTheBox Pentesting Report</h5>
+              <div class="d-grid gap-2 col-5 mx-auto p-1">
+                <a href="https://github.com/nieshakenzie/HackTheBox"><button class="btn btn-dark" type="button">Click
+                    Here</button></a>
+              </div>
             </div>
           </div>
         </div>
@@ -254,25 +265,25 @@
     <div class="container">
       <div class="row p-3">
         <div class="col">
-          <h1 class="text-center">Contact</h1>
+          <h1 class="text-center" data-aos="fade-up">CONTACT</h1>
         </div>
       </div>
       <div class="row justify-content-center">
         <div class="col-5">
           <form>
-            <div class="mb-3">
+            <div class="mb-3" data-aos="fade-up">
               <label for="Name" class="form-label">Name</label>
               <input type="text" class="form-control" id="Name" aria-describedby="emailHelp">
             </div>
-            <div class="mb-3">
+            <div class="mb-3" data-aos="fade-up">
               <label for="Email" class="form-label">Email</label>
               <input type="email" class="form-control" id="Email">
             </div>
-            <div class="mb-3">
+            <div class="mb-3" data-aos="fade-up">
               <label for="exampleFormControlTextarea1" class="form-label">Message</label>
               <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
-            <div class="d-grid gap-2 col-3 mx-auto">
+            <div class="d-grid gap-2 col-3 mx-auto" data-aos="fade-up">
               <button type="submit" class="btn btn-success shadow-lg">Send</button>
             </div>
           </form>
@@ -294,7 +305,10 @@
         Nurqadar</a></p>
   </footer>
   <!-- Footer -->
-
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
   <script src="bootstrap/js/bootstrap.js"></script>
 </body>
 
