--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
           </ul>
         </div>
       </div>
+    </nav>
   </div>
-  </nav>
   <!-- Navbar -->
 
   <!-- Photo -->
@@ -211,8 +211,8 @@
       </div>
       <br>
       <br>
-      <div class="row justify-content-center" data-aos="fade-up">
-        <div class="col-md-3">
+      <div class="row justify-content-center">
+        <div class="col-md-3" data-aos="flip-left">
           <div class="card">
             <img src="assets/TryHackMe.png" class="cartd-img-op shadow-lg " alt="TryHackMe">
             <div class="card-body shadow-lg" style="background-color: #c1c1c1;">
@@ -225,7 +225,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3" data-aos="flip-left">
           <div class="card">
             <img src="assets/Letsdefend.png" class="cartd-img-op shadow-lg " alt="Letsdefend">
             <div class="card-body shadow-lg" style="background-color: #c1c1c1;">
@@ -238,7 +238,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3" data-aos="flip-left">
           <div class="card">
             <img src="assets/HTB.png" class="cartd-img-op shadow-lg " alt="HTB">
             <div class="card-body shadow-lg" style="background-color: #c1c1c1;">
@@ -264,29 +264,77 @@
   <div class="contact" id="contact">
     <div class="container">
       <div class="row p-3">
-        <div class="col">
+        <div class="col-md">
           <h1 class="text-center" data-aos="fade-up">CONTACT</h1>
         </div>
       </div>
       <div class="row justify-content-center">
         <div class="col-5">
-          <form>
+          <div class="alert alert-success alert-dismissible fade show d-none my-alert" role="alert">
+            <strong>Thank You!</strong> Your message has been sent.
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+          <form name="submit-to-google-sheet">
             <div class="mb-3" data-aos="fade-up">
               <label for="Name" class="form-label">Name</label>
-              <input type="text" class="form-control" id="Name" aria-describedby="emailHelp">
+              <input type="text" class="form-control" id="Name" aria-describedby="emailHelp" name="nama">
             </div>
             <div class="mb-3" data-aos="fade-up">
               <label for="Email" class="form-label">Email</label>
-              <input type="email" class="form-control" id="Email">
+              <input type="email" class="form-control" id="Email" name="email">
             </div>
             <div class="mb-3" data-aos="fade-up">
               <label for="exampleFormControlTextarea1" class="form-label">Message</label>
-              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="pesan"></textarea>
             </div>
-            <div class="d-grid gap-2 col-3 mx-auto" data-aos="fade-up">
-              <button type="submit" class="btn btn-success shadow-lg">Send</button>
+            <div class="d-grid gap-2 col-md-3 mx-auto" data-aos="fade-up">
+              <button type="submit" class="btn btn-success shadow-lg btn-send">Send</button>
+              <button class="btn btn-success shadow-lg d-none btn-done" type="button" disabled>
+                <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                Loading...
+              </button>
             </div>
           </form>
+        </div>
+      </div>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <div class="row justify-content-center">
+        <div class="col-lg-1 text-center" data-aos="flip-left">
+          <div>
+            <a href="https://www.linkedin.com/in/ferry-nurqadar-237646172/"><svg xmlns="http://www.w3.org/2000/svg"
+                width="80" height="80" viewBox="0 0 24 24" style="fill: rgba(0, 160, 220);transform: msFilter">
+                <path
+                  d="M20 3H4a1 1 0 0 0-1 1v16a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1zM8.339 18.337H5.667v-8.59h2.672v8.59zM7.003 8.574a1.548 1.548 0 1 1 0-3.096 1.548 1.548 0 0 1 0 3.096zm11.335 9.763h-2.669V14.16c0-.996-.018-2.277-1.388-2.277-1.39 0-1.601 1.086-1.601 2.207v4.248h-2.667v-8.59h2.56v1.174h.037c.355-.675 1.227-1.387 2.524-1.387 2.704 0 3.203 1.778 3.203 4.092v4.71z">
+                </path>
+              </svg>
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-1 text-center" data-aos="flip-left">
+          <div>
+            <a href="https://github.com/nieshakenzie/"><svg xmlns="http://www.w3.org/2000/svg" width="80" height="80"
+                viewBox="0 0 24 24" style="fill: rgb(0, 0, 0);transform: msFilter">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M12.026 2c-5.509 0-9.974 4.465-9.974 9.974 0 4.406 2.857 8.145 6.821 9.465.499.09.679-.217.679-.481 0-.237-.008-.865-.011-1.696-2.775.602-3.361-1.338-3.361-1.338-.452-1.152-1.107-1.459-1.107-1.459-.905-.619.069-.605.069-.605 1.002.07 1.527 1.028 1.527 1.028.89 1.524 2.336 1.084 2.902.829.091-.645.351-1.085.635-1.334-2.214-.251-4.542-1.107-4.542-4.93 0-1.087.389-1.979 1.024-2.675-.101-.253-.446-1.268.099-2.64 0 0 .837-.269 2.742 1.021a9.582 9.582 0 0 1 2.496-.336 9.554 9.554 0 0 1 2.496.336c1.906-1.291 2.742-1.021 2.742-1.021.545 1.372.203 2.387.099 2.64.64.696 1.024 1.587 1.024 2.675 0 3.833-2.33 4.675-4.552 4.922.355.308.675.916.675 1.846 0 1.334-.012 2.41-.012 2.737 0 .267.178.577.687.479C19.146 20.115 22 16.379 22 11.974 22 6.465 17.535 2 12.026 2z">
+                </path>
+              </svg>
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-1 text-center" data-aos="flip-left">
+          <div>
+            <a href="mailto:ferrynurqadar14@gmail.com"><svg xmlns="http://www.w3.org/2000/svg" width="80" height="80"
+                viewBox="0 0 24 24" style="fill: rgba(234, 67, 53);transform:msFilter">
+                <path
+                  d="m18.73 5.41-1.28 1L12 10.46 6.55 6.37l-1.28-1A2 2 0 0 0 2 7.05v11.59A1.36 1.36 0 0 0 3.36 20h3.19v-7.72L12 16.37l5.45-4.09V20h3.19A1.36 1.36 0 0 0 22 18.64V7.05a2 2 0 0 0-3.27-1.64z">
+                </path>
+              </svg>
+            </a>
+          </div>
         </div>
       </div>
     </div>
@@ -301,15 +349,38 @@
   <!-- Footer -->
   <footer class="footer1 pb-3">
     <p class="text-center text-white">Created with ❤️ by <a href="https://www.instagram.com/marmut_handsome/"
-        class="fw-bold">Ferry
-        Nurqadar</a></p>
+        class="fw-bold">Ferry Nurqadar</a></p>
   </footer>
   <!-- Footer -->
+
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
     AOS.init();
   </script>
   <script src="bootstrap/js/bootstrap.js"></script>
+
+  <script>
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbxXr7B5DwRjwGZTNb6lBggBnAz-6osNujWE3meQwNjaX8EHxNXgBGn4s2uXhf8LEjIQ2g/exec'
+    const form = document.forms['submit-to-google-sheet']
+    const btnsend = document.querySelector('.btn-send');
+    const btndone = document.querySelector('.btn-done');
+    const myalert = document.querySelector('.my-alert');
+
+    form.addEventListener('submit', e => {
+      e.preventDefault()
+      btndone.classList.toggle('d-none');
+      btnsend.classList.toggle('d-none');
+      fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+        .then(response => {
+          btnsend.classList.toggle('d-none');
+          btndone.classList.toggle('d-none');
+          myalert.classList.toggle('d-none');
+          form.reset()
+          console.log('Success!', response)
+        })
+        .catch(error => console.error('Error!', error.message))
+    })
+  </script>
 </body>
 
 </html>
