--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         <div class="col-md-3" data-aos="flip-left">
           <div class="card">
             <img src="assets/TryHackMe.png" class="cartd-img-op shadow-lg " alt="TryHackMe">
-            <div class="card-body shadow-lg" style="background-color: #c1c1c1;">
+            <div class="card-body shadow-lg text-center" style="background-color: #c1c1c1;">
               <h5 class="card-title text-center">TryHackMe CTF Report</h5>
               <div class="d-grid gap-2 col-5 mx-auto">
                 <br>
@@ -228,7 +228,7 @@
         <div class="col-md-3" data-aos="flip-left">
           <div class="card">
             <img src="assets/Letsdefend.png" class="cartd-img-op shadow-lg " alt="Letsdefend">
-            <div class="card-body shadow-lg" style="background-color: #c1c1c1;">
+            <div class="card-body shadow-lg text-center" style="background-color: #c1c1c1;">
               <h5 class="card-title text-center">Let's Defend Analysis Report</h5>
               <div class="d-grid gap-2 col-5 mx-auto">
                 <br>
@@ -241,7 +241,7 @@
         <div class="col-md-3" data-aos="flip-left">
           <div class="card">
             <img src="assets/HTB.png" class="cartd-img-op shadow-lg " alt="HTB">
-            <div class="card-body shadow-lg" style="background-color: #c1c1c1;">
+            <div class="card-body shadow-lg text-center" style="background-color: #c1c1c1;">
               <h5 class="card-title text-center">HackTheBox Pentesting Report</h5>
               <div class="d-grid gap-2 col-5 mx-auto p-1">
                 <a href="https://github.com/nieshakenzie/HackTheBox"><button class="btn btn-dark" type="button">Click
