--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 
   <!-- Footer -->
   <footer class="footer1 pb-3">
-    <p class="text-center text-white">Created with ❤️ by <a href="https://www.instagram.com/marmut_handsome/"
+    <p class="text-center text-white">Created by <a href="https://www.instagram.com/marmut_handsome/"
         class="fw-bold">Ferry Nurqadar</a></p>
   </footer>
   <!-- Footer -->
