--- a/index.html
+++ b/index.html
@@ -34,11 +34,6 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about">
-                <h5>About</h5>
-              </a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link" href="#skills">
                 <h5>Skills</h5>
               </a>
@@ -71,12 +66,10 @@
         <p class="fs-2 fw-light">Security Engineer, Pentesting</p>
         <div class="row justify-content-center p-3">
           <div class="col-md-6">
-            <p class="about_text">Mahasiswa Cyber Security dari Universitas Bina Nusantara. Memiliki
-              ketertarikan
-              dengan
-              dunia Cyber. Memiliki kemampuan dibidang Cyber Defense, Offensive Security, Pentesting, Digital Forensics,
-              Kali
-              Linux dan Programming Language.</p>
+            <p class="fs-4 fw-light">Cyber Security Student from Bina Nusantara University. Have an interest in the
+              cyber
+              world. Have capabilities in the field of Cyber Defense, Offensive Security, Pentesting, Digital Forensics,
+              Kali Linux and Programming Language.</p>
             <!-- <div class="row justify-content-center p-3">
       <div class="col-md-4">
       </div>
