--- a/index.html
+++ b/index.html
@@ -118,7 +118,9 @@
           <div class="card">
             <img src="assets/HTML5.png" class="cartd-img-op shadow-lg " alt="HTML5">
             <div class="card-body shadow-lg" style="background-color: #c1c1c1;">
-              <h5 class="card-title">HTML</h5>
+              <div class="card-body shadow-lg" style="background-color: #c1c1c1;">
+                <a href="https://www.sololearn.com/certificates/CT-KMXVTJSW" class="text_link">HTML</a>
+              </div>
             </div>
           </div>
         </div>
