--- a/index.html
+++ b/index.html
@@ -116,11 +116,9 @@
         </div>
         <div class="col-md-2 text-center" data-aos="flip-left">
           <div class="card">
-            <img src="assets/HTML5.png" class="cartd-img-op shadow-lg " alt="HTML5">
+            <img src="assets/HTML5.png" class="cartd-img-op shadow-lg " alt="PHP">
             <div class="card-body shadow-lg" style="background-color: #c1c1c1;">
-              <div class="card-body shadow-lg" style="background-color: #c1c1c1;">
-                <a href="https://www.sololearn.com/certificates/CT-KMXVTJSW" class="text_link">HTML</a>
-              </div>
+              <a href="https://www.sololearn.com/certificates/CT-KMXVTJSW" class="text_link">HTML</a>
             </div>
           </div>
         </div>
