--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <div class="card">
             <img src="assets/CSS.png" class="cartd-img-op shadow-lg " alt="CSS">
             <div class="card-body shadow-lg" style="background-color: #c1c1c1;">
-              <h5 class="card-title">CSS</h5>
+              <a href="https://www.sololearn.com/certificates/CT-MSLXNUKG" class="text_link">CSS</a>
             </div>
           </div>
         </div>
@@ -136,6 +136,14 @@
               <img src="assets/PYTHON.png" class="cartd-img-op shadow-lg " alt="PYTHON">
               <div class="card-body shadow-lg" style="background-color: #c1c1c1;">
                 <h5 class="card-title">Python</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-2 text-center" data-aos="flip-right">
+            <div class="card">
+              <img src="assets/JS.png" class="cartd-img-op shadow-lg " alt="PYTHON">
+              <div class="card-body shadow-lg" style="background-color: #c1c1c1;">
+                <a href="https://www.sololearn.com/certificates/CT-UAAKIMUT" class="text_link">JavaScript</a>
               </div>
             </div>
           </div>
@@ -174,6 +182,15 @@
               <div class="card-body shadow-lg" style="background-color: #c1c1c1;">
                 <a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-NJSNPAHOZC.png"
                   class="text_link">Jr Penetration Tester</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-2 text-center" data-aos="flip-left">
+            <div class="card">
+              <img src="assets/Pre.png" class="cartd-img-op shadow-lg " alt="Offensive">
+              <div class="card-body shadow-lg" style="background-color: #c1c1c1;">
+                <a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-VGMZSFIXJA.png"
+                  class="text_link">Pre Security</a>
               </div>
             </div>
           </div>
