--- a/index.html
+++ b/index.html
@@ -194,6 +194,15 @@
               </div>
             </div>
           </div>
+          <div class="col-md-2 text-center" data-aos="flip-left">
+            <div class="card">
+              <img src="assets/Comp+.png" class="cartd-img-op shadow-lg " alt="Offensive">
+              <div class="card-body shadow-lg" style="background-color: #c1c1c1;">
+                <a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-CK8LRB5UWR.png"
+                  class="text_link">CompTIA Pentest+</a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
