--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <div class="col-md-6">
             <p class="fs-4 fw-light">Cyber Security Student from Bina Nusantara University. Have an interest in the
               cyber
-              world. Have capabilities in the field of Cyber Defense, Offensive Security, Pentesting, Digital Forensics,
+              world. Have capabilities in the field of Cyber Security, Cyber Defense, Offensive Security, Pentesting, Digital Forensics,
               Kali Linux and Programming Language.</p>
             <!-- <div class="row justify-content-center p-3">
       <div class="col-md-4">
