--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
           class="rounded-circle border border-dark shadow-lg">
         <br>
         <h1 class="display-4">Ferry Nurqadar</h1>
-        <p class="fs-2 fw-light">Security Engineer, Pentesting</p>
+        <p class="fs-2 fw-light">Security Engineer, Penetration Tester</p>
         <div class="row justify-content-center p-3">
           <div class="col-md-6">
             <p class="fs-4 fw-light">Cyber Security Student from Bina Nusantara University. Have an interest in the
               cyber
-              world. Have capabilities in the field of Cyber Security, Cyber Defense, Offensive Security, Pentesting, Digital Forensics,
+              world. Have capabilities in the field of Cyber Security, Cyber Defense, Offensive Security, Penetration Tester, Digital Forensics,
               Kali Linux and Programming Language.</p>
             <!-- <div class="row justify-content-center p-3">
       <div class="col-md-4">
