--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
                 <ul class="navbar-menu">
                     <li class="nav-item">
                         <br>
-                        <a href="#">Whoami</a>
+                        <a href="#">Post</a>
                     </li>
                     <li class="nav-item">
                         <br>
-                        <a href="#">Skills</a>
+                        <a href="#">Whoami</a>
                     </li>
                     <li class="nav-item">
                         <br>
@@ -32,7 +32,7 @@
                     </li>
                     <li class="nav-item">
                         <br>
-                        <a href="#">Jurnals</a>
+                        <a href="#">Skills</a>
                     </li>
                     <li class="nav-item">
                         <br>
@@ -111,10 +111,10 @@
                 </div>
             </div>
         </section>
-        <br><br><br><br><br>
-        <!-- End About -->
+        <br><br><br><br><br><!-- End About -->
 
-        <!-- Footer --><br><br><br><br>
+        <!-- Footer --><br><br><br>
+        <br>
         <br>
             <footer class="footer"> <div class="container p-5">
                 <div class="row justify-content-between">
