--- a/web/web.html
+++ b/web/web.html
@@ -20,19 +20,19 @@
                 <ul class="navbar-menu">
                     <li class="nav-item">
                         <br>
+                        <a href="#">Post</a>
+                    </li>
+                    <li class="nav-item">
+                        <br>
                         <a href="#">Whoami</a>
                     </li>
                     <li class="nav-item">
                         <br>
+                        <a href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <br>
                         <a href="#">Skills</a>
-                    </li>
-                    <li class="nav-item">
-                        <br>
-                        <a href="../index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <br>
-                        <a href="#">Jurnals</a>
                     </li>
                     <li class="nav-item">
                         <br>
@@ -63,11 +63,11 @@
                 <div class="row">
                     <div
                         class="col-4"><!-- <div class="images-container">
-                                                        <a href=""><img src="/assets/Jurnals/Web 1.png" class="shadow rounded-4 darkened-img" alt="1"></a>
-                                                        <div class="images-text">
-                                                            <p class="fw-bold">Simple CTF | TryHackMe</p>
-                                                        </div>
-                                                    </div> -->
+                                                                                    <a href=""><img src="/assets/Jurnals/Web 1.png" class="shadow rounded-4 darkened-img" alt="1"></a>
+                                                                                    <div class="images-text">
+                                                                                        <p class="fw-bold">Simple CTF | TryHackMe</p>
+                                                                                    </div>
+                                                                                </div> -->
                     </div>
                 </div>
             </div>
