--- a/blue/blue.html
+++ b/blue/blue.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../style.css">
+        <link rel="stylesheet" href="../java.js">
         <title>Marmut Handsome</title>
         <style>
             .navbar {
@@ -12,7 +13,6 @@
             }
         </style>
     </head>
-
     <body>
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-transparent">
@@ -24,11 +24,11 @@
                     </li>
                     <li class="nav-item">
                         <br>
-                        <a href="#">About</a>
+                        <a href="#">Whoami</a>
                     </li>
                     <li class="nav-item">
                         <br>
-                        <a href="#">Home</a>
+                        <a href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <br>
@@ -43,109 +43,41 @@
         </nav>
         <!-- End Navbar -->
 
-        <!-- Home -->
-        <div id="Home" name="Home">
-            <div class="image-container">
-                <img src="/assets/Home.jpeg" alt="Image">
-                <div class="image-text">
-                    <div class="row">
-                        <div class="col-2"></div>
-                        <div class="col-8">
-                            <img src="https://readme-typing-svg.demolab.com?font=Fira+Code&size=36&pause=1000&color=26F72B&center=true&vCenter=true&width=500&height=100&lines=FERRY+NURQADAR" alt="Typing SVG"/>
-                            <p class="fs-2 fw-light">Pentester, Bounty Hunter, CTF & Red Team</p>
-                        </div>
-                        <div class="col-2"></div>
+        <!-- Title -->
+        <br><br><br><br><br><br><br><br><br><br>
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <h1 class="fw-bold text-center">Blue Team</h1>
                     </div>
                 </div>
             </div>
-        </div>
-        <!-- End Home -->
+        </section>
+        <!-- End Title -->
 
-        <!-- CTF -->
-        <br><br><br>
-        <section id="Jurnals" name="Jurnals">
+        <!-- Post -->
+        <br><br><br><br><br>
+        <section>
             <div class="container">
                 <div class="row">
                     <div class="col-4">
-                        <div class="images-container">
-                            <a href="/ctf/ctf.html"><img src="assets/Jurnals/CTF 1.png" class="shadow rounded-4 darkened-img" alt="1"></a>
-                            <div class="images-text">
-                                <p class="fw-bold">Capture The Flag</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-4">
-                        <div class="images-container">
-                            <a href="/web/web.html"><img src="assets/Jurnals/Web 1.png" class="shadow rounded-4 darkened-img" alt="2"></a>
-                            <div class="images-text">
-                                <p class="fw-bold">Web Pentest</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-4">
-                        <div class="images-container">
-                            <a href="/ios/ios.html"><img src="assets/Jurnals/IOS 1.jpg" class="shadow rounded-4 darkened-img" alt="2"></a>
-                            <div class="images-text">
-                                <p class="fw-bold">IOS Pentest</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <br>
-                <div class="row d-flex justify-content-between">
-                    <div class="col-6">
-                        <div class="images-container">
-                            <a href="/red/red.html"><img src="assets/Jurnals/Red 1.jpg" class="shadow rounded-4 darkened-img" alt="1"></a>
-                            <div class="images-text">
-                                <p class="fw-bold">Red Team</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-6">
-                        <div class="images-container">
-                            <a href="/blue/blue.html"><img src="assets/Jurnals/Blue 1.jpg" class="shadow rounded-4 darkened-img" alt="2"></a>
-                            <div class="images-text">
-                                <p class="fw-bold">Blue Team</p>
-                            </div>
+                        <div
+                            class="images-container"><!-- <a href="/ctf/simplectf.html"><img src="/assets/Jurnals/Hnet.com-image.png" class="shadow rounded-4 darkened-img" alt="1"></a>
+                                                                                                                                                                                            <div class="images-text">
+                                                                                                                                                                                                <p class="fw-bold">Simple CTF | TryHackMe</p>
+                                                                                                                                                                                            </div> -->
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <!-- End CTF -->
-
-        <!-- About -->
-        <br><br><br><br><br>
-        <section id="About" name="About" style="background-color: #212529;">
-            <div class="container">
-                <div class="row">
-                    <div class="col text-center">
-                        <h1>About Me</h1>
-                    </div>
-                </div>
-                <br><br>
-                <div class="row">
-                    <div class="col-2"></div>
-                    <div class="col-4 text-center">
-                        <img class="photo border border-light rounded-circle" src="assets/photo.jpeg" alt="Me">
-                    </div>
-                    <div class="col-4">
-                        <p class="fs-5 fw-light">Cyber Security Student from Bina Nusantara University. Have an interest in the cyber world. Have capabilities in the field of Cyber Defense, Offensive Security, Pentesting, Digital Forensics, Kali Linux and Programming Language</p>
-                    </div>
-                    <div class="col-2"></div>
-                </div>
-            </div>
-        </section>
-        <br><br><br><br><br>
-        <!-- End About -->
+        <!-- End Post -->
 
         <!-- Footer -->
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-            <footer class="footer"> <div class="container p-5">
+        <br><br><br><br><br>
+        <footer class="footer">
+            <div class="container p-5">
                 <div class="row justify-content-between">
                     <div class="col-auto">
                         <span class="text-body-emphasis">2023 ©
@@ -174,9 +106,6 @@
             <br>
         </footer>
         <!-- End Footer -->
-
-
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     </body>
 </html>
