--- a/ios/ios.html
+++ b/ios/ios.html
@@ -28,7 +28,7 @@
                     </li>
                     <li class="nav-item">
                         <br>
-                        <a href="#">Home</a>
+                        <a href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <br>
@@ -63,11 +63,11 @@
                 <div class="row">
                     <div
                         class="col-4"><!-- <div class="images-container">
-                                                                                    <a href="/ctf/simplectf.html"><img src="/assets/Jurnals/Hnet.com-image.png" class="shadow rounded-4 darkened-img" alt="1"></a>
-                                                                                    <div class="images-text">
-                                                                                        <p class="fw-bold">Simple CTF | TryHackMe</p>
-                                                                                    </div>
-                                                                                </div> -->
+                                                                                                                <a href="/ctf/simplectf.html"><img src="/assets/Jurnals/Hnet.com-image.png" class="shadow rounded-4 darkened-img" alt="1"></a>
+                                                                                                                <div class="images-text">
+                                                                                                                    <p class="fw-bold">Simple CTF | TryHackMe</p>
+                                                                                                                </div>
+                                                                                                            </div> -->
                     </div>
                 </div>
             </div>
