--- a/index.html
+++ b/index.html
@@ -20,23 +20,23 @@
                 <ul class="navbar-menu">
                     <li class="nav-item">
                         <br>
-                        <a href="#">Post</a>
+                        <a href="../index.html#post">Post</a>
                     </li>
                     <li class="nav-item">
                         <br>
-                        <a href="#">About</a>
+                        <a href="../index.html#about">About</a>
                     </li>
                     <li class="nav-item">
                         <br>
-                        <a href="#">Home</a>
+                        <a href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <br>
-                        <a href="#">Skills</a>
+                        <a href="../index.html#skill">Skills</a>
                     </li>
                     <li class="nav-item">
                         <br>
-                        <a href="#">Contact</a>
+                        <a href="../index.html#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -61,10 +61,11 @@
         </div>
         <!-- End Home -->
 
-        <!-- CTF -->
+        <!-- Post -->
         <br><br><br>
-        <section id="Jurnals" name="Jurnals">
+        <section id="post" name="post">
             <div class="container">
+                <br><br>
                 <div class="row">
                     <div class="col-4">
                         <div class="images-container">
@@ -112,31 +113,67 @@
                 </div>
             </div>
         </section>
-        <!-- End CTF -->
+        <!-- End Post -->
 
-        <!-- About -->
-        <br><br><br><br><br>
-        <section id="About" name="About" style="background-color: #212529;">
+        <!-- Latest Post -->
+        <br><br><br>
+        <section>
             <div class="container">
-                <div class="row">
-                    <div class="col text-center">
-                        <h1>About Me</h1>
-                    </div>
-                </div>
+                <h1>Latest Post</h1>
                 <br><br>
                 <div class="row">
-                    <div class="col-2"></div>
-                    <div class="col-4 text-center">
-                        <img class="photo border border-light rounded-circle" src="assets/photo.jpeg" alt="Me">
-                    </div>
                     <div class="col-4">
-                        <p class="fs-5 fw-light">Cyber Security Student from Bina Nusantara University. Have an interest in the cyber world. Have capabilities in the field of Cyber Defense, Offensive Security, Pentesting, Digital Forensics, Kali Linux and Programming Language</p>
+                        <div class="images-container">
+                            <a href="/ios/frida.html"><img src="assets/Jurnals/Frida.jpeg" class="shadow rounded-4 darkened-img" alt="1"></a>
+                            <div class="images-text">
+                                <p class="fw-bold">IOS Frida Objection For Pentesting</p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-2"></div>
+                    <div
+                        class="col-4"><!-- <div class="images-container">
+                                                                                                                                                                        <a href="/web/web.html"><img src="assets/Jurnals/Web 1.png" class="shadow rounded-4 darkened-img" alt="2"></a>
+                                                                                                                                                                        <div class="images-text">
+                                                                                                                                                                            <p class="fw-bold">Web Pentest</p>
+                                                                                                                                                                        </div>
+                                                                                                                                                                    </div> -->
+                    </div>
+                    <div
+                        class="col-4"><!-- <div class="images-container">
+                                                                                                                                                                        <a href="/ios/ios.html"><img src="assets/Jurnals/IOS 1.jpg" class="shadow rounded-4 darkened-img" alt="2"></a>
+                                                                                                                                                                        <div class="images-text">
+                                                                                                                                                                            <p class="fw-bold">IOS Pentest</p>
+                                                                                                                                                                        </div>
+                                                                                                                                                                    </div> -->
+                    </div>
                 </div>
             </div>
         </section>
+        <!-- End Latest Post -->
+
+        <!-- About -->
         <br><br><br><br><br>
+        <!-- <section id="about" name="about" style="background-color: #212529;">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col text-center">
+                                        <h1>About Me</h1>
+                                    </div>
+                                </div>
+                                <br><br>
+                                <div class="row">
+                                    <div class="col-2"></div>
+                                    <div class="col-4 text-center">
+                                        <img class="photo border border-light rounded-circle" src="assets/photo.jpeg" alt="Me">
+                                    </div>
+                                    <div class="col-4">
+                                        <p class="fs-5 fw-light">Cyber Security Student from Bina Nusantara University. Have an interest in the cyber world. Have capabilities in the field of Cyber Defense, Offensive Security, Pentesting, Digital Forensics, Kali Linux and Programming Language</p>
+                                    </div>
+                                    <div class="col-2"></div>
+                                </div>
+                            </div>
+                        </section>
+                        <br><br><br><br><br> -->
         <!-- End About -->
 
         <!-- Footer -->
