--- a/web/web.html
+++ b/web/web.html
@@ -20,11 +20,11 @@
                 <ul class="navbar-menu">
                     <li class="nav-item">
                         <br>
-                        <a href="#">Post</a>
+                        <a href="../index.html#post">Post</a>
                     </li>
                     <li class="nav-item">
                         <br>
-                        <a href="#">Whoami</a>
+                        <a href="../index.html#about">About</a>
                     </li>
                     <li class="nav-item">
                         <br>
@@ -32,11 +32,11 @@
                     </li>
                     <li class="nav-item">
                         <br>
-                        <a href="#">Skills</a>
+                        <a href="../index.html#skill">Skills</a>
                     </li>
                     <li class="nav-item">
                         <br>
-                        <a href="#">Contact</a>
+                        <a href="../index.html#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -63,11 +63,11 @@
                 <div class="row">
                     <div
                         class="col-4"><!-- <div class="images-container">
-                                                                                                                <a href=""><img src="/assets/Jurnals/Web 1.png" class="shadow rounded-4 darkened-img" alt="1"></a>
-                                                                                                                <div class="images-text">
-                                                                                                                    <p class="fw-bold">Simple CTF | TryHackMe</p>
-                                                                                                                </div>
-                                                                                                            </div> -->
+                                                                                                                                                                        <a href=""><img src="/assets/Jurnals/Web 1.png" class="shadow rounded-4 darkened-img" alt="1"></a>
+                                                                                                                                                                        <div class="images-text">
+                                                                                                                                                                            <p class="fw-bold">Simple CTF | TryHackMe</p>
+                                                                                                                                                                        </div>
+                                                                                                                                                                    </div> -->
                     </div>
                 </div>
             </div>
