--- a/index.html
+++ b/index.html
@@ -130,21 +130,21 @@
                             </div>
                         </div>
                     </div>
-                    <div
-                        class="col-4"><!-- <div class="images-container">
-                                                                                                                                                                        <a href="/web/web.html"><img src="assets/Jurnals/Web 1.png" class="shadow rounded-4 darkened-img" alt="2"></a>
-                                                                                                                                                                        <div class="images-text">
-                                                                                                                                                                            <p class="fw-bold">Web Pentest</p>
-                                                                                                                                                                        </div>
-                                                                                                                                                                    </div> -->
+                    <div class="col-4">
+                        <div class="images-container">
+                            <a href="/red/gophish.html"><img src="assets/Jurnals/Phishing.jpeg" class="shadow rounded-4 darkened-img" alt="2"></a>
+                            <div class="images-text">
+                                <p class="fw-bold">Phishing Campaign Using Gophish</p>
+                            </div>
+                        </div>
                     </div>
                     <div
                         class="col-4"><!-- <div class="images-container">
-                                                                                                                                                                        <a href="/ios/ios.html"><img src="assets/Jurnals/IOS 1.jpg" class="shadow rounded-4 darkened-img" alt="2"></a>
-                                                                                                                                                                        <div class="images-text">
-                                                                                                                                                                            <p class="fw-bold">IOS Pentest</p>
-                                                                                                                                                                        </div>
-                                                                                                                                                                    </div> -->
+                                                                                                                                                                                                                                                            <a href="/ios/ios.html"><img src="assets/Jurnals/IOS 1.jpg" class="shadow rounded-4 darkened-img" alt="2"></a>
+                                                                                                                                                                                                                                                            <div class="images-text">
+                                                                                                                                                                                                                                                                <p class="fw-bold">IOS Pentest</p>
+                                                                                                                                                                                                                                                            </div>
+                                                                                                                                                                                                                                                        </div> -->
                     </div>
                 </div>
             </div>
@@ -154,26 +154,26 @@
         <!-- About -->
         <br><br><br><br><br>
         <!-- <section id="about" name="about" style="background-color: #212529;">
-                            <div class="container">
-                                <div class="row">
-                                    <div class="col text-center">
-                                        <h1>About Me</h1>
-                                    </div>
-                                </div>
-                                <br><br>
-                                <div class="row">
-                                    <div class="col-2"></div>
-                                    <div class="col-4 text-center">
-                                        <img class="photo border border-light rounded-circle" src="assets/photo.jpeg" alt="Me">
-                                    </div>
-                                    <div class="col-4">
-                                        <p class="fs-5 fw-light">Cyber Security Student from Bina Nusantara University. Have an interest in the cyber world. Have capabilities in the field of Cyber Defense, Offensive Security, Pentesting, Digital Forensics, Kali Linux and Programming Language</p>
-                                    </div>
-                                    <div class="col-2"></div>
-                                </div>
-                            </div>
-                        </section>
-                        <br><br><br><br><br> -->
+                                                    <div class="container">
+                                                        <div class="row">
+                                                            <div class="col text-center">
+                                                                <h1>About Me</h1>
+                                                            </div>
+                                                        </div>
+                                                        <br><br>
+                                                        <div class="row">
+                                                            <div class="col-2"></div>
+                                                            <div class="col-4 text-center">
+                                                                <img class="photo border border-light rounded-circle" src="assets/photo.jpeg" alt="Me">
+                                                            </div>
+                                                            <div class="col-4">
+                                                                <p class="fs-5 fw-light">Cyber Security Student from Bina Nusantara University. Have an interest in the cyber world. Have capabilities in the field of Cyber Defense, Offensive Security, Pentesting, Digital Forensics, Kali Linux and Programming Language</p>
+                                                            </div>
+                                                            <div class="col-2"></div>
+                                                        </div>
+                                                    </div>
+                                                </section>
+                                                <br><br><br><br><br> -->
         <!-- End About -->
 
         <!-- Footer -->
