--- a/red/red.html
+++ b/red/red.html
@@ -62,11 +62,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-4">
-                        <div
-                            class="images-container"><!-- <a href="/ctf/simplectf.html"><img src="/assets/Jurnals/Hnet.com-image.png" class="shadow rounded-4 darkened-img" alt="1"></a>
-                                                                                                                                                            <div class="images-text">
-                                                                                                                                                                <p class="fw-bold">Simple CTF | TryHackMe</p>
-                                                                                                                                                            </div> -->
+                        <div class="images-container">
+                            <a href="../red/gophish.html"><img src="/assets/Jurnals/Phishing.jpeg" class="shadow rounded-4 darkened-img" alt="1"></a>
+                            <div class="images-text">
+                                <p class="fw-bold">Phishing Campaign Using Gophish</p>
+                            </div>
                         </div>
                     </div>
                 </div>
